# smartCalc1

./: README.md
src/: Makefile  SmartCalc_v1_0.c  SmartCalc_v1_0.h  a.out  helpers.c  main.c  manual.texi  stack.c  stack.h  submain.h  tests.c
src/SmartCalc/: CMakeLists.txt  SmartCalc_v1_0.c  SmartCalc_v1_0.h  credit.cpp  credit.h  credit.ui  deposit.cpp  deposit.h  deposit.ui  graph.cpp  graph.h  graph.ui  input_x.cpp  input_x.h  input_x.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/SmartCalc/.qt/: QtDeploySupport.cmake
